client/stylesheets/components/chat/chat.styl
.theirMessage
  background-color: #1EC4FB !important

.myMessage
  // background-color: #00749A !important

.name
  font-weight: bold

.chat
    height calc(100vh - 65px)
    position relative
    > *
        position absolute
        left 0
        right 0
    > .messages
        top 0
        bottom 150px
        overflow-y auto
        margin-bottom 0
        transition bottom 0.1s ease
    > form.chat-form
        box-shadow 0px 0px 15px #888, 0px 0px 15px #888
        height 150px
        bottom 0
        overflow-y hidden
        transition height 0.1s ease
        > *
            position absolute
            top 0
            bottom 0
            display flex
            align-items center
            justify-content center
        > .input-field
            left 0
            right 70px
            margin-top: 2rem;
            padding 0 10px
        > :last-child
            right 0
            width 70px

.message-item-p
  white-space: pre

